--- a/practice_from_books/pyproject.toml
+++ b/practice_from_books/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pathlib>=1.0.1",
+    "pillow>=12.0.0",
     "requests>=2.32.5",
 ]
